--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "YouTube Magic",
-  "version": "1.0",
+  "name": "YouTube Magic Test",
+  "version": "1.1",
   "description": "Opens a magic URL for the current YouTube video to generate a summary of the content",
   "permissions": ["activeTab"],
   "action": {
@@ -20,4 +20,3 @@
     "48": "icon.png"
   }
 }
-
